--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <link rel="stylesheet" href="style.css" />
 </head>
-  <body>
-    //Add content
+  <body ng-app="Todo">
+    <div class='page-container' ng-controller='TodoCtrl'>
+      <h2>To Do</h2>
+      <ul class="todo-list">
+        <li>Run 5k</li>
+        <li>Cook a meal</li>
+      </ul>
+      <ul class="add-list">
+          <input type="text" class="txt" placeholder="New Todo" />
+      </ul>
+    </div>
   </body>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.8/angular.js"></script>
     <script src="app.js"></script>
