--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css" />
+
 </head>
   <body ng-app="Todo">
     <div class='page-container' ng-controller='TodoCtrl'>
       <h2>To Do</h2>
-      <ul class="todo-list">
-        <li>Run 5k</li>
-        <li>Cook a meal</li>
+      <ul class="todo-list" ng-repeat='todo in todos track by $index'>
+        <li>
+          <span>{{todo}}</span>
+        </li>
       </ul>
       <ul class="add-list">
           <input type="text" class="txt" placeholder="New Todo" />
       </ul>
     </div>
   </body>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.8/angular.js"></script>
-    <script src="app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+  <script src="app.js"></script>
 </html>
