--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </li>
       </ul>
       <ul class="add-list">
-          <input type="text" class="txt" placeholder="New Todo" />
+          <input type="text" class="txt" placeholder="New Todo" ng-model='newTodo' ng-keyup="add($event)"/>
       </ul>
     </div>
   </body>
