--- a/index.html
+++ b/index.html
@@ -17,14 +17,20 @@
 	        border-bottom: 1px solid #cccccc;
             list-style-type: none;
         }
+         #spacing{
+            padding-left: 5px;
+        }
+        #deleteColr:hover{
+            color: red;
+        }
     </style>
 </head>
 <body ng-app="todoApp" ng-controller="todoCtrl">
     <div class="container">
         <div class="well col-sm-offset-3 col-sm-6">
             <h3 style="text-align:center">Angular Todo List</h3>
-            <div ng-repeat="task in todoList" id="todo-list">
-                <li>{{task.content}}</li>
+            <div ng-repeat="task in todoList track by $index" id="todo-list">
+                <li><input type="checkbox" ng-model="task.done"/><span id="spacing">{{task.content}}</span><span ng-click="removeTask($index)" id="deleteColr" class="pull-right glyphicon glyphicon-remove-circle"></span></li>
             </div>
             <input type="text" id="addInput" class="form-control" name="newTask" ng-model="newTask" placeholder="Enter a new todo to add" ng-keyup="addTask($event)"/>
         </div>
