--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
         #addInput{
             margin-top: 25px;
         }
+        .crossed{
+            color: grey;
+            text-decoration:line-through;
+        }
+        #todo-list{
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
         #todo-list li {
             background-color: white;
 	        padding: 10px 10px 10px 5px;
@@ -29,9 +38,9 @@
     <div class="container">
         <div class="well col-sm-offset-3 col-sm-6">
             <h3 style="text-align:center">Angular Todo List</h3>
-            <div ng-repeat="task in todoList track by $index" id="todo-list">
-                <li><input type="checkbox" ng-model="task.done"/><span id="spacing">{{task.content}}</span><span ng-click="removeTask($index)" id="deleteColr" class="pull-right glyphicon glyphicon-remove-circle"></span></li>
-            </div>
+            <ul ng-repeat="task in todoList track by $index" id="todo-list">
+                <li ng-class="{crossed: task.done}"><input type="checkbox" ng-model="task.done"/><span id="spacing">{{task.content}}</span><span ng-click="removeTask($index)" id="deleteColr" class="pull-right glyphicon glyphicon-remove-circle"></span></li>
+            </ul>
             <input type="text" id="addInput" class="form-control" name="newTask" ng-model="newTask" placeholder="Enter a new todo to add" ng-keyup="addTask($event)"/>
         </div>
     </div>
