--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         #deleteColr:hover{
             color: red;
         }
+        .footer{
+            margin-top: 25px;
+        }
     </style>
 </head>
 <body ng-app="todoApp" ng-controller="todoCtrl">
@@ -42,8 +45,15 @@
                 <li ng-class="{crossed: task.done}"><input type="checkbox" ng-model="task.done"/><span id="spacing">{{task.content}}</span><span ng-click="removeTask($index)" id="deleteColr" class="pull-right glyphicon glyphicon-remove-circle"></span></li>
             </ul>
             <input type="text" id="addInput" class="form-control" name="newTask" ng-model="newTask" placeholder="Enter a new todo to add" ng-keyup="addTask($event)"/>
+            <div class="footer">
+                <div class='pull-left'>
+                    <div>Remaining Tasks: {{getRemaining()}}</div>
+                </div>
+                <div class='pull-right' ng-click="clearCompleted()">
+                    <div>Clear Completed: {{todoList.length - getRemaining()}}</div>
+                </div>
+            </div>
         </div>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="app.js"></script>
 </body>
